[package]
name = "jy-bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jy-bot"
path = "src/main.rs"

[[bin]]
name = "jy"
path = "src/cli/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
rust_decimal = { version = "1", features = ["serde-with-str"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
futures-util = "0.3"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
# EIP-712 signing
k256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.10"
hex = "0.4"
rand = "0.8"
# CLI interface
dialoguer = "0.11"
console = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
