[package]
name = "jy-bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jy-bot"
path = "src/main.rs"

[[bin]]
name = "jy"
path = "src/cli/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
rust_decimal = { version = "1", features = ["serde-with-str"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
futures-util = "0.3"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
# EIP-712 signing
k256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.10"
hex = "0.4"
rand = "0.8"
# CLI interface
dialoguer = "0.11"
console = "0.15"
# 官方 Polymarket CLOB V2 客户端（实盘下单签名）
polymarket_client_sdk_v2 = { version = "=0.6.0-canary.1", features = ["clob"] }
alloy = { version = "1", default-features = false, features = ["signer-local", "signers"] }
# 依赖树里同时存在 ring 与 aws-lc-rs，需在启动时显式选定 rustls 加密后端
rustls = { version = "0.23", features = ["ring"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
